XSCOLIBRI-74: No vertical scrollbar in "Print preview" in IE6 Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@25935 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/print.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/print.css
@@ -9,6 +9,9 @@
   padding: 10px !important;
   overflow: visible !important;
 }
+#body {
+  overflow: auto !important;
+}
 /* Hide unneeded stuff */
 .edit_section,
 #rightPanels, #leftPanels, #mainmenu, #contentmenu, #editmenu,
